--- a/platformio.ini
+++ b/platformio.ini
@@ -1,17 +1,21 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
+[platformio]
+default_envs = device_A, device_B
+src_dir = .
 
-[env:esp32dev]
+[common_settings]
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = 
-	WiFi
-	https://github.com/hirotakaster/CoAP-simple-library.git
+monitor_speed = 115200
+
+[env:device_A]
+extends = common_settings
+build_src_filter = -<*> +<src_A/>
+upload_port = /dev/ttyUSB0
+upload_speed = 115200  ; <-- Add this line
+
+[env:device_B]
+extends = common_settings
+build_src_filter = -<*> +<src_B/>
+upload_port = /dev/ttyUSB1
+upload_speed = 115200  ; <-- Add this line
