esp to esp working on wifi with monitoring

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,15 +7,16 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+upload_speed = 115200
 
 [env:device_A]
 extends = common_settings
 build_src_filter = -<*> +<src_A/>
 upload_port = /dev/ttyUSB0
-monitor_port = /dev/ttyUSB0  ; <-- This is the fix
+monitor_port = /dev/ttyUSB0
 
 [env:device_B]
 extends = common_settings
 build_src_filter = -<*> +<src_B/>
 upload_port = /dev/ttyUSB1
-monitor_port = /dev/ttyUSB1  ; <-- This is the fix
+monitor_port = /dev/ttyUSB1
