esp to esp to coap working ping pong on wifi

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,8 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 upload_speed = 115200
+lib_deps =
+    hirotakaster/CoAP simple library
 
 [env:device_A]
 extends = common_settings
