--- a/platformio.ini
+++ b/platformio.ini
@@ -1,24 +1,32 @@
 [platformio]
-default_envs = device_A, device_B
+; Tell PIO to look for source files in the project's root folder
 src_dir = .
 
-[common_settings]
+[secrets]
+WIFI_SSID = Airtel_jimi_2244
+WIFI_PASS = air80447
+SERVER_IP = 192.168.1.7
+
+[env:device_A]
 platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
 upload_speed = 115200
-lib_deps =
-    hirotakaster/CoAP simple library
 
-[env:device_A]
-extends = common_settings
-build_src_filter = -<*> +<src_A/>
+; Use the ports for Device A
 upload_port = /dev/ttyUSB0
 monitor_port = /dev/ttyUSB0
 
-[env:device_B]
-extends = common_settings
-build_src_filter = -<*> +<src_B/>
-upload_port = /dev/ttyUSB1
-monitor_port = /dev/ttyUSB1
+; Add the CoAP library
+lib_deps =
+    hirotakaster/CoAP simple library
+
+; This line now correctly reads from the [secrets] section
+build_flags = 
+    -D WIFI_SSID="\"${secrets.WIFI_SSID}\""
+    -D WIFI_PASS="\"${secrets.WIFI_PASS}\""
+    -D SERVER_IP="\"${secrets.SERVER_IP}\""
+
+; This is the critical missing line:
+build_src_filter = -<*> +<src_A/> +<lib/>
