--- a/platformio.ini
+++ b/platformio.ini
@@ -14,9 +14,12 @@ framework = arduino
 monitor_speed = 115200
 upload_speed = 115200
 
+; Add this line to find your sensor libraries
+lib_dir = lib
+
 ; Use the ports for Device A
-upload_port = /dev/ttyUSB1
-monitor_port = /dev/ttyUSB1
+upload_port = /dev/ttyUSB0
+monitor_port = /dev/ttyUSB0
 
 ; Add the CoAP library
 lib_deps =
@@ -28,5 +31,5 @@ build_flags =
     -D WIFI_PASS="\"${secrets.WIFI_PASS}\""
     -D SERVER_IP="\"${secrets.SERVER_IP}\""
 
-; This is the critical missing line:
-build_src_filter = -<*> +<src_A/> +<lib/>
+; This filter now only includes src_A
+build_src_filter = -<*> +<src_A/>
