--- a/wokwi.toml
+++ b/wokwi.toml
@@ -3,7 +3,5 @@ version = 1
 firmware = "build/Project.ino.elf"
 elf = "build/Project.ino.elf"
 
-# Forward http://localhost:8180 to port 80 on the simulated ESP32:
 [[net.forward]]
-from = "localhost:8180"
-to = "target:80"
+from = "target:5684"
