--- a/platformio.ini
+++ b/platformio.ini
@@ -3,9 +3,9 @@
 src_dir = .
 
 [secrets]
-WIFI_SSID = Airtel_jimi_2244
-WIFI_PASS = air80447
-SERVER_IP = 192.168.1.7
+WIFI_SSID = Jimit Chavda
+WIFI_PASS = heilschindler
+SERVER_IP = 10.133.103.131
 
 [env:device_A]
 platform = espressif32
